--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "stripe": "^12.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
